# TaskCentral

./: .gitattributes  .gitignore  Cargo.toml  Gemfile  README.md  default.env  ideas.md  index.html  manifest.json  performance.md  server.rb
app/: config.ru  routes.rb
app/controllers/: AdminController.rb  ApplicationController.rb  ClientController.rb  IndexController.rb
app/cron/: backup.rb
app/helpers/: ApplicationHelper.rb  DatabaseHelper.rb  UrlHelper.rb
app/models/: user.rb
app/public/admin/: index.html
app/public/admin/libs/: add-user.js  commons.js  live-userlist.js
app/public/client/assets/: template.xlsx
app/public/client/libs/: backend.js  budget.js  commons.js  competitive.js  data.js  fuzzy.js  index.js  project.js  query.js  recur.js  task.js
app/public/client/libs/ui/: cookbook.js  css.js  dialog.js  filter.js  index.css  layout.js  micromodal.css  pure-min.css  splash.css  tel.js  timer.css  timer.js  tooltips.js
app/public/client/libs/ui/themes/: index.css  loader.js
app/public/client/libs/ui/themes/default-dark/: colors.css
app/public/client/libs/ui/themes/nord/: colors.css
app/public/client/libs/ui/themes/nord-dark/: colors.css
app/public/client/libs/ui/themes/pink/: colors.css
app/public/client/libs/ui/themes/pink-dark/: colors.css
app/public/client/libs/ui/themes/solarized/: colors.css
app/public/client/libs/ui/themes/solarized-dark/: colors.css
app/public/client/libs/ui/views/: budgets.css  budgets.js  budgets_treemap.js  details.css  details.js  forecast.js  gantt.css  gantt.js  home.css  home.js  import.js  log.css  log.js  metrics.css  metrics.js  project_rules.css  project_rules.js  settings.css  settings.js
app/res/: mariadb
app/res/migrations/: 001_user.rb  002_user_last_visited_updated.rb  003_bcrypt.rb  004_user_email.rb
app/views/: index.erb
app/views/admin/: index.html
app/views/client/: index.html
app/views/layout/: main.erb
docgen/: cookbook.md
libs/: backend.js  commons.js  data.js  fuzzy.js  project.js  query.js  task.js
libs/ui/: css.js  filter.js  index.css  layout.js  sliders.css  splash.css  timer.js
libs/ui/views/: details.css  details.js  forecast.css  forecast.js  gantt.css  gantt.js  home.css  home.js  log.css  log.js  settings.js
migrations/2023-10-05-185847_create_users/: down.sql  up.sql
src/: commons.rs  config.rs  controllers.rs  cron.rs  db.rs  helpers.rs  main.rs  middleware.rs  schema.rs
src/controllers/: admin_controller.rs  app_controller.rs  client_controller.rs  index_controller.rs
src/cron/: backup.rs
src/db/: functions.rs
src/helpers/: password_hash.rs  send_file.rs
src/middleware/: admin_area.rs  charset.rs  client_area.rs
src/models/: users.rs
