[package]
name = "taskcentral"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
axum = { version = "0.6.20", features = ["default", "headers", "http1", "http2", "macros", "multipart", "query"] }
bcrypt = "0.15.0"
chrono = "0.4.31"
# Limited by diesel-async to 0.9.5
deadpool = { version = "0.9.5", features = ["managed", "rt_tokio_1", "rt_async-std_1", "serde"] }
diesel = { version = "2.1.3", features = ["mysql_backend"] }
diesel-async = { version = "0.4.1", features = ["tokio", "mysql_async", "deadpool", "mysql"] }
dotenv = "0.15.0"
http = "0.2.9"
hyper = { version = "0.14.27", features = ["full"] }
num_cpus = "1.16.0"
parking_lot = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["default", "derive", "rc"] }
serde_json = "1.0.107"
time = "0.3.29"
tokio = { version = "1.32.0", features = ["full"] }
tokio-cron-scheduler = "0.9.4"
tokio-stream = { version = "0.1.14", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["io", "futures-io", "full"] }
tower = { version = "0.4.13", features = ["full", "tokio", "tokio-stream"] }
tower-http = { version = "0.4.4", features = ["tokio", "tower", "fs", "trace"] }
tower-sessions = { version = "0.2.1", features = ["tokio", "moka-store"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
diesel_cli = "2.1.1"

[profile.release]
opt-level=3
