cargo-features = ["profile-rustflags"]

[package]
name = "taskcentral"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = ">=0.1"
axum = { version = ">=0.6", features = ["default", "headers", "http1", "http2", "macros", "multipart", "query"] }
bcrypt = ">=0.15.0"
chrono = ">=0.4.31"
clap = { version = ">=4.4.6", features = ["string", "env", "derive"] }
concat-string = ">=1.0.1"
# Limited by diesel-async to 0.9.5
deadpool = { version = "0.9.5", features = ["managed", "rt_tokio_1", "rt_async-std_1", "serde"] }
diesel = { version = ">=2.1.3", features = ["mysql_backend"] }
diesel-async = { version = ">=0.4.1", features = ["tokio", "mysql_async", "deadpool", "mysql"] }
dotenv = ">=0.15"
http = ">=0.2"
hyper = { version = ">=0.14", features = ["full"] }
moka = { version = ">=0.12", features = ["sync"] }
num_cpus = ">=1.16"
parking_lot = ">=0.12.1"
rand = ">=0.8.5"
serde = { version = ">=1.0.188", features = ["default", "derive", "rc"] }
serde_json = ">=1.0.107"
time = ">=0.3.29"
tokio = { version = ">=1.32.0", features = ["full"] }
tokio-cron-scheduler = ">=0.9.4"
tokio-stream = { version = ">=0.1.14", features = ["full"] }
tokio-util = { version = ">=0.7.9", features = ["io", "futures-io", "full"] }
tower = { version = ">=0.4", features = ["full", "tokio", "tokio-stream"] }
tower-http = { version = ">=0.4", features = ["tokio", "tower", "fs", "trace"] }
tower-sessions = { version = ">=0.6", features = ["moka-store"] }
tracing = ">=0.1.37"
tracing-subscriber = ">=0.3.17"

[dev-dependencies]
diesel_cli = "2.1.1"

[profile.dev]
opt-level=0
codegen-units=16

[profile.release]
opt-level=3
# link time optimization
lto='fat'
# consider everything as one chunk
codegen-units=1
panic='abort'
rustflags=['-C', 'target-cpu=native']

[profile.flamegraph]
# everything same as release except debug info
inherits="release"
debug=true
panic='unwind'
